CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (CMAKE_BUILD_TYPE DEBUG)

SET (CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

ADD_SUBDIRECTORY (
	./visitor
	)

#SET (LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib CACHE PATH "Single Directory for all bins")
SET (EXECUTABLE_OUTPUT_PATH bin CACHE PATH "Output path for all executables")
